images on index.html and Omos.html were weird on chrome, only tested on firefox before this, so fixed on chrome now, hope no other browsers are the same

--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,13 @@
     text-align: left;
 }
 
+.forsideogom-img {
+    max-height: 500px;       /* Stopper billedet fra at blive gigantisk */
+    object-fit: cover;       /* Beskærer pænt */
+}
+
+@media (min-width: 768px) {
+    .forsideogom-img {
+        height: 100vh;
+    }
+}
